--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -64,7 +65,7 @@
         ================================================== -->
         <section id="intro" class="s-intro">
 
-            <div id="particles-js" class="s-intro__particles"></div>
+
 
             <div class="s-intro__slider swiper-container">
                 <div class="swiper-wrapper">
@@ -96,16 +97,31 @@
                         </div>
                     </div>  <!-- end counter -->
 
+                    <div id="particles-js" class="s-intro__particles"></div>
+                    
                     <div class="s-intro__content-bottom">
                         <h1 class="s-intro__content-title">Where Science meet spirit</h1>
                         <p>
                         When science meet spirit, we can all sleep well and dream big. <br>
                         </p>
+
+                        <div id="mc_embed_signup">
+
+                          <form action="https://gmail.us18.list-manage.com/subscribe/post?u=2ba1af11e8499d0b027e9a92e&amp;id=f58eb2d1de" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                              <div id="mc_embed_signup_scroll">
+
+                            <input type="email" value="" name="EMAIL" class="email u-fullwidth" id="mce-EMAIL" placeholder="email address" required>
+                              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2ba1af11e8499d0b027e9a92e_f58eb2d1de" tabindex="-1" value=""></div>
+                              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn--primary u-fullwidth"></div>
+                              </div>
+                          </form>
+                        </div>
                     </div>
 
                 </div>
 
-                <div class="s-intro__scroll">
+                <!-- <div class="s-intro__scroll">
                     <p class="scroll-text">Scroll For More</p>
                     <a href="#info" class="smoothscroll">
                         <div class="mouse"></div>
@@ -117,77 +133,6 @@
 
         </section> <!-- end s-intro -->
 
-
-
-
-        <!-- # footer
-        ================================================== -->
-        <footer class="s-footer">
-
-            <div class="row s-footer__top">
-
-                <div class="column lg-6 stack-on-700 s-footer__block s-footer__info">
-
-                    <h4 class="h6">Eons</h4>
-
-                    <p class="desc">
-                    Beatae voluptatum reprehenderit et debitis consequatur. Quidem est velit hic culpa.
-                    Veritatis id tempora voluptas et provident maxime maiores dignissimos non. Incidunt
-                    asperiores non. Consequatur nostrum itaque.
-                    </p>
-
-                    <ul class="s-footer__social">
-
-                    </ul>
-
-                </div> <!-- end s-footer__info -->
-
-                <div class="column lg-6 stack-on-700 s-footer__block s-footer__contact">
-
-                    <h4 class="h6">Contact Info</h4>
-
-                    <div class="row">
-                        <div class="column lg-6 stack-on-1000">
-                            <p>
-                            <strong>Phone</strong> <br>
-                            <a href="tel:123-456-9000">+123 456 9000</a>
-                            </p>
-                        </div>
-                        <div class="column lg-6 stack-on-1000">
-                            <p>
-                            <strong>Email</strong> <br>
-                            <a href="mailto:#0">hello@eons.com</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <p>
-                    <strong>Office Address</strong> <br>
-                    1600 Amphitheatre Parkway <br>
-                    Mountain View, CA
-                    94043 US <br>
-                    </p>
-
-                </div> <!-- end s-footer__contact -->
-
-            </div> <!-- end s-footer__top -->
-
-            <div class="row s-footer__bottom">
-                <div class="column lg-12">
-                    <div class="ss-copyright">
-                        <span>© Copyright Eons 2021</span>
-                        <span>Design by <a href="#">Thiru</a></span>
-                    </div>
-                </div>
-
-                <div class="ss-go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M6 4H18V6H6zM11 14L11 20 13 20 13 14 18 14 12 8 6 14z"></path></svg>
-                     </a>
-                </div>
-            </div> <!--end s-footer__bottom -->
-
-        </footer> <!--end s-footer -->
 
     </div> <!-- end pagewrap -->
 
