--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+    <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
 
 </head>
 
@@ -98,7 +98,7 @@
                     </div>  <!-- end counter -->
 
                     <div id="particles-js" class="s-intro__particles"></div>
-                    
+
                     <div class="s-intro__content-bottom">
                         <h1 class="s-intro__content-title">Where Science meet spirit</h1>
                         <p>
@@ -108,13 +108,12 @@
                         <div id="mc_embed_signup">
 
                           <form action="https://gmail.us18.list-manage.com/subscribe/post?u=2ba1af11e8499d0b027e9a92e&amp;id=f58eb2d1de" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                              <div id="mc_embed_signup_scroll">
-
-                            <input type="email" value="" name="EMAIL" class="email u-fullwidth" id="mce-EMAIL" placeholder="email address" required>
+                            <div id="mc_embed_signup_scroll">
+                              <input type="email" value="" name="EMAIL" class="email u-fullwidth" id="mce-EMAIL" placeholder="email address" required>
                               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2ba1af11e8499d0b027e9a92e_f58eb2d1de" tabindex="-1" value=""></div>
                               <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn--primary u-fullwidth"></div>
-                              </div>
+                            </div>
                           </form>
                         </div>
                     </div>
