cambio de texto

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     <div id="particles-js" class="s-intro__particles"></div>
 
                     <div class="s-intro__content-bottom">
-                        <h1 class="s-intro__content-title">Where Science meet spirit</h1>
+                        <h1 class="s-intro__content-title">When science meet spirit, we can all sleep well and dream big.</h1>
                         <p>
-                        When science meet spirit, we can all sleep well and dream big. <br>
+                        <br>
                         </p>
 
                         <div id="mc_embed_signup">
